# url_downloader

./: .gitignore  CMakeLists.txt  CMakeLists.txt.txt  README.md  README.md.txt  desktop.ini  urls.txt
include/: download.h.txt  downloader.h
src/: downloader.cpp  downloader.cpp.txt  main.cpp  main.cpp.txt
